2002-08-13  Lars Clausen  <lrclause@cs.uiuc.edu>

	* plug-ins/cgm/cgm.c (init_fonts): Proper Pango interfacing.

2002-08-12  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/render_eps.c: Text rendering that scales correctly.  Too bad
	the standard fonts don't get selected right.

2002-08-09  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/diagramdata.h: 
	* lib/paper.c (get_paper_info): 
	* lib/paper.h: 
	* plug-ins/xfig/xfig-import.c: 
	Committed before testing.  I am so embarrased.  This compiles, now
	that the includes are in the right order.
	
	* app/diagram.c (diagram_init): 
	* app/app_procs.c (do_convert): 
	* app/preferences.h: 
	* lib/diagramdata.h: 
	* lib/diagramdata.c (new_diagram_data): 
	* lib/paper.h: 
	* lib/paper.c (get_paper_info): 
	Moved new_diagram part of prefs into lib/diagramdata.h.  More
	could be done in new_diagram_data() now.

2002-08-08  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/render_eps.c: Better scaling of fonts at non-normal zoom.

2002-08-07  Cyrille Chepelov <cyrille@chepelov.org>

	* configure.in: removed silly user-visible comment

	(actually, this is a dummy entry before I manually run nemo; for
	some dist-upgrade related reason, this morning's run aborted before
	the snapshots were created)
	
2002-08-06  Lars Clausen  <lrclause@cs.uiuc.edu>

	* objects/network/wanlink.c: 
	* objects/network/bus.c: 
	stdprop compliance!

	* objects/custom/custom_object.c: 
	* objects/network/wanlink.c: 
	* objects/flowchart/parallelogram.c: 
	* objects/flowchart/ellipse.c: 
	* objects/flowchart/diamond.c: 
	* objects/flowchart/box.c: 
	Removed GTK defaults stuff.
	
	* objects/UML/fork.c: 
	* objects/UML/object.c: 
	* objects/UML/lifeline.c: 
	* objects/UML/branch.c: 
	* objects/GRAFCET/transition.c: 
	* objects/FS/function.c: Removed GTK include.

	* objects/FS/flow-ortho.c: 
	* objects/FS/flow.c: Made the label behave again.
	Also removed GTK defaults stuff.

2002-08-05  Cyrille Chepelov  <cyrille@chepelov.org>
